--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lr-ifs"
+name = "aer-ifs"
 version = "0.2.3"
 description = "Lidar Ratio computation from ECMWF IFS model data"
 authors = ["augustinm <augustinm@met.no>"]
@@ -15,7 +15,6 @@ dask = "^2024.9.0"
 rich = "^13.8.1"
 scipy = "^1.14.1"
 
-
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
 cartopy = "^0.23.0"
@@ -25,4 +24,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-lr-ifs = {callable = "lr_ifs.main:app"}
+aer-ifs = {callable = "aer_ifs.main:app"}
